feat: add provider availability and premium search